modify jupyter notebook

--- a/statistics.ipynb
+++ b/statistics.ipynb
@@ -8,20 +8,211 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Probablity"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class setoperator(object):\n",
+    "    def __init__(self):\n",
+    "        \n",
+    "# def setoperator():\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Embedding customized pics\n",
+    "%%HTML\n",
+    "<iframe width=\"100%\" height=\"100\" src=\"pic/formula1.png\"></iframe>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### For Octave Setup\n",
+    "[Plot Setting in Terminal](https://stackoverflow.com/questions/13786754/octave-gnuplot-aquaterm-error-set-terminal-aqua-enhanced-title-figure-1-unk)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import scipy.stats\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "# from scipy.stats import uniform\n",
+    "# from scipy.stats import norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data_normal = scipy.stats.norm.rvs(size=10000, loc=1, scale=1)\n",
+    "ax = sns.distplot(data_normal,\n",
+    "                  bins=100,\n",
+    "                  kde=True,\n",
+    "                  color='skyblue',\n",
+    "                  hist_kws={\"linewidth\": 15,'alpha':1})\n",
+    "ax.set(xlabel='Normal Distribution', ylabel='Frequency')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "date\n"
+      "Requirement already up-to-date: pip in /anaconda3/lib/python3.6/site-packages (19.0.3)\n",
+      "Collecting tensorflow==1.5.0\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f2/0b/da4f6379f12ca375b1155f542d0d36803ba2c6b406d39e6bde5eaa2f0abe/tensorflow-1.5.0-cp36-cp36m-macosx_10_11_x86_64.whl (42.5MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 42.5MB 86kB/s eta 0:00:011\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.12.1 in /anaconda3/lib/python3.6/site-packages (from tensorflow==1.5.0) (1.13.3)\n",
+      "Requirement already satisfied: protobuf>=3.4.0 in /anaconda3/lib/python3.6/site-packages (from tensorflow==1.5.0) (3.6.1)\n",
+      "Requirement already satisfied: absl-py>=0.1.6 in /anaconda3/lib/python3.6/site-packages (from tensorflow==1.5.0) (0.7.0)\n",
+      "Requirement already satisfied: wheel>=0.26 in /anaconda3/lib/python3.6/site-packages (from tensorflow==1.5.0) (0.29.0)\n",
+      "Collecting tensorflow-tensorboard<1.6.0,>=1.5.0 (from tensorflow==1.5.0)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/cc/fa/91c06952517b4f1bc075545b062a4112e30cebe558a6b962816cb33efa27/tensorflow_tensorboard-1.5.1-py3-none-any.whl (3.0MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 3.0MB 33kB/s ta 0:00:016\n",
+      "\u001b[?25hRequirement already satisfied: six>=1.10.0 in /anaconda3/lib/python3.6/site-packages (from tensorflow==1.5.0) (1.11.0)\n",
+      "Requirement already satisfied: setuptools in /anaconda3/lib/python3.6/site-packages (from protobuf>=3.4.0->tensorflow==1.5.0) (36.5.0.post20170921)\n",
+      "Collecting html5lib==0.9999999 (from tensorflow-tensorboard<1.6.0,>=1.5.0->tensorflow==1.5.0)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/ae/ae/bcb60402c60932b32dfaf19bb53870b29eda2cd17551ba5639219fb5ebf9/html5lib-0.9999999.tar.gz (889kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 890kB 76kB/s ta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: markdown>=2.6.8 in /anaconda3/lib/python3.6/site-packages (from tensorflow-tensorboard<1.6.0,>=1.5.0->tensorflow==1.5.0) (3.0.1)\n",
+      "Collecting bleach==1.5.0 (from tensorflow-tensorboard<1.6.0,>=1.5.0->tensorflow==1.5.0)\n",
+      "  Downloading https://files.pythonhosted.org/packages/33/70/86c5fec937ea4964184d4d6c4f0b9551564f821e1c3575907639036d9b90/bleach-1.5.0-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: werkzeug>=0.11.10 in /anaconda3/lib/python3.6/site-packages (from tensorflow-tensorboard<1.6.0,>=1.5.0->tensorflow==1.5.0) (0.12.2)\n",
+      "Building wheels for collected packages: html5lib\n",
+      "  Building wheel for html5lib (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /Users/admin/Library/Caches/pip/wheels/50/ae/f9/d2b189788efcf61d1ee0e36045476735c838898eef1cad6e29\n",
+      "Successfully built html5lib\n",
+      "Installing collected packages: html5lib, bleach, tensorflow-tensorboard, tensorflow\n",
+      "  Found existing installation: html5lib 0.999999999\n",
+      "    Uninstalling html5lib-0.999999999:\n",
+      "      Successfully uninstalled html5lib-0.999999999\n",
+      "  Found existing installation: bleach 2.0.0\n",
+      "    Uninstalling bleach-2.0.0:\n",
+      "      Successfully uninstalled bleach-2.0.0\n",
+      "Successfully installed bleach-1.5.0 html5lib-0.9999999 tensorflow-1.5.0 tensorflow-tensorboard-1.5.1\n"
      ]
     }
    ],
    "source": [
-    "print(\"date\")"
+    "!pip install --upgrade pip\n",
+    "!pip install tensorflow==1.5.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uninstalling tensorflow-1.12.0:\n",
+      "  Successfully uninstalled tensorflow-1.12.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip uninstall --yes tensorflow"
    ]
   },
   {
