update for statistics

--- a/statistics.ipynb
+++ b/statistics.ipynb
@@ -59,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -171,65 +173,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: pip in /Users/tianwolf/env36/lib/python3.6/site-packages (20.0.2)\n",
-      "Collecting tensorflow==1.5.0\n",
-      "  Downloading tensorflow-1.5.0-cp36-cp36m-macosx_10_11_x86_64.whl (42.5 MB)\n",
-      "\u001b[K     |█▏                              | 1.6 MB 2.6 kB/s eta 4:24:41\u001b[31mERROR: Exception:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_vendor/urllib3/response.py\", line 425, in _error_catcher\n",
-      "    yield\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_vendor/urllib3/response.py\", line 507, in read\n",
-      "    data = self._fp.read(amt) if not fp_closed else b\"\"\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_vendor/cachecontrol/filewrapper.py\", line 62, in read\n",
-      "    data = self.__fp.read(amt)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/http/client.py\", line 449, in read\n",
-      "    n = self.readinto(b)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/http/client.py\", line 493, in readinto\n",
-      "    n = self.fp.readinto(b)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/socket.py\", line 586, in readinto\n",
-      "    return self._sock.recv_into(b)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/ssl.py\", line 1012, in recv_into\n",
-      "    return self.read(nbytes, buffer)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/ssl.py\", line 874, in read\n",
-      "    return self._sslobj.read(len, buffer)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/ssl.py\", line 631, in read\n",
-      "    v = self._sslobj.read(len, buffer)\n",
-      "socket.timeout: The read operation timed out\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_internal/cli/base_command.py\", line 186, in _main\n",
-      "    status = self.run(options, args)\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_internal/commands/install.py\", line 331, in run\n",
-      "    resolver.resolve(requirement_set)\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_internal/legacy_resolve.py\", line 177, in resolve\n",
-      "    discovered_reqs.extend(self._resolve_one(requirement_set, req))\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_internal/legacy_resolve.py\", line 333, in _resolve_one\n",
-      "    abstract_dist = self._get_abstract_dist_for(req_to_install)\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_internal/legacy_resolve.py\", line 282, in _get_abstract_dist_for\n",
-      "    abstract_dist = self.preparer.prepare_linked_requirement(req)\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_internal/operations/prepare.py\", line 482, in prepare_linked_requirement\n",
-      "    hashes=hashes,\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_internal/operations/prepare.py\", line 287, in unpack_url\n",
-      "    hashes=hashes,\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_internal/operations/prepare.py\", line 159, in unpack_http_url\n",
-      "    link, downloader, temp_dir.path, hashes\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_internal/operations/prepare.py\", line 303, in _download_http_url\n",
-      "    for chunk in download.chunks:\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_internal/utils/ui.py\", line 160, in iter\n",
-      "    for x in it:\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_internal/network/utils.py\", line 39, in response_chunks\n",
-      "    decode_content=False,\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_vendor/urllib3/response.py\", line 564, in stream\n",
-      "    data = self.read(amt=amt, decode_content=decode_content)\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_vendor/urllib3/response.py\", line 529, in read\n",
-      "    raise IncompleteRead(self._fp_bytes_read, self.length_remaining)\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/contextlib.py\", line 99, in __exit__\n",
-      "    self.gen.throw(type, value, traceback)\n",
-      "  File \"/Users/tianwolf/env36/lib/python3.6/site-packages/pip/_vendor/urllib3/response.py\", line 430, in _error_catcher\n",
-      "    raise ReadTimeoutError(self._pool, None, \"Read timed out.\")\n",
-      "pip._vendor.urllib3.exceptions.ReadTimeoutError: HTTPSConnectionPool(host='files.pythonhosted.org', port=443): Read timed out.\u001b[0m\n"
+      "Collecting pip\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/54/0c/d01aa759fdc501a58f431eb594a17495f15b88da142ce14b5845662c13f3/pip-20.0.2-py2.py3-none-any.whl (1.4MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 1.4MB 18kB/s ta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: pip\n",
+      "  Found existing installation: pip 19.0.3\n",
+      "    Uninstalling pip-19.0.3:\n",
+      "      Successfully uninstalled pip-19.0.3\n",
+      "Successfully installed pip-20.0.2\n",
+      "Requirement already satisfied: tensorflow==1.5.0 in /anaconda3/lib/python3.6/site-packages (1.5.0)\n",
+      "Requirement already satisfied: tensorflow-tensorboard<1.6.0,>=1.5.0 in /anaconda3/lib/python3.6/site-packages (from tensorflow==1.5.0) (1.5.1)\n",
+      "Requirement already satisfied: numpy>=1.12.1 in /anaconda3/lib/python3.6/site-packages (from tensorflow==1.5.0) (1.13.3)\n",
+      "Requirement already satisfied: absl-py>=0.1.6 in /anaconda3/lib/python3.6/site-packages (from tensorflow==1.5.0) (0.7.0)\n",
+      "Requirement already satisfied: six>=1.10.0 in /anaconda3/lib/python3.6/site-packages (from tensorflow==1.5.0) (1.11.0)\n",
+      "Requirement already satisfied: wheel>=0.26 in /anaconda3/lib/python3.6/site-packages (from tensorflow==1.5.0) (0.29.0)\n",
+      "Requirement already satisfied: protobuf>=3.4.0 in /anaconda3/lib/python3.6/site-packages (from tensorflow==1.5.0) (3.6.1)\n",
+      "Requirement already satisfied: werkzeug>=0.11.10 in /anaconda3/lib/python3.6/site-packages (from tensorflow-tensorboard<1.6.0,>=1.5.0->tensorflow==1.5.0) (0.12.2)\n",
+      "Requirement already satisfied: markdown>=2.6.8 in /anaconda3/lib/python3.6/site-packages (from tensorflow-tensorboard<1.6.0,>=1.5.0->tensorflow==1.5.0) (3.0.1)\n",
+      "Requirement already satisfied: html5lib==0.9999999 in /anaconda3/lib/python3.6/site-packages (from tensorflow-tensorboard<1.6.0,>=1.5.0->tensorflow==1.5.0) (0.9999999)\n",
+      "Requirement already satisfied: bleach==1.5.0 in /anaconda3/lib/python3.6/site-packages (from tensorflow-tensorboard<1.6.0,>=1.5.0->tensorflow==1.5.0) (1.5.0)\n",
+      "Requirement already satisfied: setuptools in /anaconda3/lib/python3.6/site-packages (from protobuf>=3.4.0->tensorflow==1.5.0) (36.5.0.post20170921)\n"
      ]
     }
    ],
@@ -240,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -293,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
