--- a/BookingsLearning/Python for Data Analysis/Chapter 3. Built-in Data Structures, Functions, and Files.ipynb
+++ b/BookingsLearning/Python for Data Analysis/Chapter 3. Built-in Data Structures, Functions, and Files.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -205,6 +205,7 @@
     "- **Slicing**\n",
     "   * While the element at the start index is included, the stop index is not included, so that the number of elements in the result is stop - start.\n",
     "   ![pyda_1302.png](./pyda_1302.png)\n",
+    "   * [Start:Stop:Step]\n",
     "\n",
     "- **Some Useful Built-in Functions**\n",
     "   * __enumerate__ is to iterate over a sequence, which returns a sequence of (i, value) tuples\n",
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +284,8 @@
       "{6: 36, 7: 49, 8: 64, 9: 81}\n",
       "{'s': 6, 't': 1, 'r': 2, 'i': 3, 'n': 4, 'g': 5}\n",
       "['Maria', 'Natalia']\n",
-      "flattened nested list: [1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+      "flattened nested list: [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "select even postion: [[0, 0, 0], [2, 4, 8], [4, 16, 64], [6, 36, 216], [8, 64, 512]]\n"
      ]
     }
    ],
@@ -302,7 +304,10 @@
     "\n",
     "some_tuples = [(1, 2, 3), (4, 5, 6), (7, 8, 9)]\n",
     "flattened = [x for tup in some_tuples for x in tup]\n",
-    "print('flattened nested list: {0}'.format(flattened))"
+    "print('flattened nested list: {0}'.format(flattened))\n",
+    "\n",
+    "ls2 = [[i, i**2, i**3] for i in range(10)]\n",
+    "print(\"select even postion: {0}\".format(ls2[::2]))"
    ]
   },
   {
